@@ -5,6 +5,7 @@
 	* removed extension fields for fegroups
 	* changed the createGroup application to use the new dedicated table for groups
 	* fixed bug in birthday list, the list should always show the birthdays of the requested user's friends
+	* added scaffolding for the my groups widget
 
 2008-09-30 Ingo Renner  <ingo@typo3.org>
 
